Version 0.9.3 (03-Dec-2011)
---------------------------
+ Added the ability to reflect generic methods
+ Added reflection of generic constraints
+ Added reflection of extension methods
+ Added reflection of attributes

Version 0.9.2 (23-Sep-2011)
---------------------------
! Nullable ref parameters were not reflected correctly - thanks to openvenom 
+ Added the ability to reflect dynamic return types, parameters, ...

Version 0.9.1 (24-Jun-2011)
---------------------------
+ Added more documentation


Version 0.9.0 (13-May-2011)
---------------------------
+ First release